--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: NML
 subtitle: Style guide
-url: ""
+url: "https:/justinslack.com"
 baseurl: ""
 # baseurl: http://test.newmedialabs.co.za/atura-styleguide/
 show_full_navigation: true
