--- a/_config.yml
+++ b/_config.yml
@@ -70,3 +70,8 @@ defaults:
       _comments:
         type: Marks the impact of this release
 
+# Custom headers
+# webrick:
+#   headers:
+#     Content-Security-Policy: default-src 'self'; object-src 'none'; img-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'unsafe-inline'; font-src 'self'; manifest-src 'self'; connect-src 'self'; worker-src 'self';
+
