--- a/_config.yml
+++ b/_config.yml
@@ -51,5 +51,5 @@ defaults:
 # Custom headers
 # webrick:
 #   headers:
-#     Content-Security-Policy: default-src 'self'; object-src 'none'; img-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self'; manifest-src 'self'; connect-src 'self'; worker-src 'self';
+#     Content-Security-Policy: default-src 'self'; object-src 'none'; img-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' https://d33wubrfki0l68.cloudfront.net; manifest-src 'self'; connect-src 'self'; worker-src 'self'
 
