Remove gard url

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Justin Slack
 subtitle: Personal website
-url: "https://justinslack.com"
+url: ""
 baseurl: ""
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
