--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Justin Slack",
   "short_name": "Justin Slack",
   "lang": "en-GB",
-  "start_url": "justinslack.com/",
+  "start_url": "https://justinslack.com",
   "display": "standalone",
   "theme_color": "#ffffff",
   "icons": [
