--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "front-end-conf",
+  "name": "jsutin-slack",
   "version": "1.0.0",
-  "description": "Front-end conference site using Eleventy and Netlfiy CMS.",
+  "description": "Personal website",
   "scripts": {
     "build": "npx eleventy",
     "watch": "npx eleventy --watch",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fedsa/front-end-conf-website"
+    "url": "https://github.com/justinslack/justinslack.com  "
   },
   "author": {
     "name": "Justin Slack",
@@ -19,11 +19,11 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fedsa/front-end-conf-website/issues"
+    "url": "https://github.com/justinslack/justinslack.com/issues"
   },
   "homepage": "https://justinslack.com",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.6",
     "gulp": "^4.0.0",
