--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsutin-slack",
+  "name": "justin-slack",
   "version": "1.0.0",
   "description": "Personal website",
   "scripts": {
